Resolve JR non-jump

--- a/src/web/page.css
+++ b/src/web/page.css
@@ -6,6 +6,6 @@
 #display {
   display: block;
   margin: 0 auto;
-  width: 440px;
-  height: 432px;
+  width: 324px;
+  height: 292px;
 }
